# CPP-Projects

./: README.md
Bank_Management/: CMakeLists.txt  README.md
Bank_Management/include/: Bank-main.hpp  a.out  main.hpp  test.cpp
Bank_Management/src/: a.out  admin.cc  customer.cc  main.cpp  staff.cc
Book_Management/: CMakeLists.txt  README.md
Book_Management/include/: main.hpp
Book_Management/src/: books_details.cpp  employee_details.cpp  main.cpp  suppliers.cpp
DatabaseHandling/: a.out  another.cpp  hashalgo.cpp  hashalgo2.cpp  test.cpp  your_database.db
